# mind-ar

./: .gitignore  .pylintrc  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/mindar/: __init__.py  compiler.py  detector.py  jit.py  matcher.py  tracker.py
tests/: README.md  __init__.py  conftest.py  test_compatibility.py  test_compiler.py  test_detector.py  test_integration.py  test_matcher.py  test_performance.py  test_tracker.py  test_types.py
