[project]
name = "mindar"
version = "0.1.0"
description = "High-performance MindAR implementation for real-time image recognition on edge devices. Developed by FANSEE LAB."
authors = [{name = "FANSEE LAB", email = "info@fansee.com"}]
maintainers = [{name = "FANSEE LAB", email = "info@fansee.com"}]
readme = "README.md"
license = {text = "MIT"}
urls = {Repository = "https://github.com/FANSEE-LAB/mind-ar", Documentation = "https://github.com/FANSEE-LAB/mind-ar#readme"}

dependencies = [
    "numpy>=1.26.0; python_version >= '3.9'",
    "opencv-python>=4.5.0; python_version >= '3.9'"
]
python = ">=3.9"

optional-dependencies.performance = []

optional-dependencies.dev = [
    "pytest>=8.0.0; python_version >= '3.8'",
    "pytest-cov>=6.0.0; python_version >= '3.9'",
    "black>=25.0.0; python_version >= '3.9'",
    "isort>=6.0.0; python_version >= '3.9'"
]

[project.scripts]
mindar-compile = "mindar.compiler:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
